--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^4.1.1",
     "dotenv": "^6.2.0",
-    "express": "~4.0.0",
+    "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.0.1",
     "mssql": "^4.3.0",
